--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <section class="hero overlay">
                     <div class="container">
                         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                        <button type="button" class="button">Заказать услугу</button>
+                        <button type="button" class="button" data-modal-open>Заказать услугу</button>
                     </div>
                 </section>
 
@@ -304,6 +304,12 @@
     
     </main>
 
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button class="btn-modal" data-modal-close>x</button>
+        </div>
+    </div>
+
     <footer>
         <div class="container">
             <ul class="footer-item list">
@@ -356,7 +362,8 @@
             </ul>
         </div>
     </footer>
- 
+
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
