--- a/index.html
+++ b/index.html
@@ -306,7 +306,11 @@
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button class="btn-modal" data-modal-close>x</button>
+            <button class="btn-modal" data-modal-close>
+            <svg class="close-btn" width="18" height="18">
+                <use href="./imges/icons.svg#icon-close-black"></use>
+            </svg>
+            </button>
         </div>
     </div>
 
