--- a/index.html
+++ b/index.html
@@ -90,9 +90,21 @@
                 <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="work list">
-                    <li class="work-item"><img src="./imges/box1.jpg" alt="picture1" width="370" class="work-img"></li>
-                    <li class="work-item"><img src="./imges/box2.jpg" alt="picture2" width="370" class="work-img"></li>
-                    <li class="work-item"><img src="./imges/box3.jpg" alt="picture3" width="370" class="work-img"></li>
+                    <li class="work-item"><img src="./imges/box1.jpg" alt="picture1" width="370" class="work-img">
+                    <div class="work-meta">
+                        <h3 class="work-pre-title">Десктопные приложения</h3>
+                    </div>
+                    </li>
+                    <li class="work-item"><img src="./imges/box2.jpg" alt="picture2" width="370" class="work-img">
+                    <div class="work-meta">
+                        <h3 class="work-pre-title">Мобильные приложения</h3>
+                    </div>
+                    </li>
+                    <li class="work-item"><img src="./imges/box3.jpg" alt="picture3" width="370" class="work-img">
+                    <div class="work-meta">
+                        <h3 class="work-pre-title">Дизайнерские решения</h3>
+                    </div>
+                    </li>
                 </ul> 
                 </div>
             </section>
