--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </a>
         <nav>
             <ul class="menu-nav list">
-                <li class="menu-item"> <a href="" class="link">Студия</a> </li>
+                <li class="menu-item"> <a href="" class="link menu-link">Студия</a> </li>
                 <li class="menu-item"> <a href="./portfolio.html" class="link">Портфолио</a> </li>
                 <li class="menu-item"> <a href="" class="link">Контакты</a> </li>
             </ul>
@@ -114,7 +114,9 @@
           
         <section class="section team">
             <div class="container">
-                <h2 class="section-title">Наша команда</h2>
+                <h2 class="section-title">Наша команда
+
+                </h2>
                     <ul class="team-item list">
                         <li class="team-photo"><img src="./imges/photo1.jpg" alt="photo1" width="270">
                         <div class="team-about">
