--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <nav>
                 <ul class="menu-nav list">
                     <li class="menu-item"> <a href="./index.html" class="link">Студия</a> </li>
-                    <li class="menu-item"> <a href="./portfolio.html" class="link">Портфолио</a> </li>
+                    <li class="menu-item"> <a href="./portfolio.html" class="link menu-link">Портфолио</a> </li>
                     <li class="menu-item"> <a href="" class="link">Контакты</a> </li>
                 </ul>
             </nav>
